--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "Ilya Tishenko",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
@@ -22,8 +25,5 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2"
-  },
-  "browserslist": [
-    "defaults"
-  ]
+  }
 }
